--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.22.0",
+    "boostrap": "^2.0.0",
     "core-js": "^3.6.5",
     "vue": "^3.0.0"
   },
@@ -17,8 +19,11 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
+    "bootstrap": "^4.0.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1"
   },
   "eslintConfig": {
     "root": true,
